mongo aggregate with pagination
